--- a/main.ipynb
+++ b/main.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 284,
    "id": "2e8c0793",
    "metadata": {},
    "outputs": [
@@ -477,9 +477,19 @@
          "name": "lag_10",
          "rawType": "float64",
          "type": "float"
+        },
+        {
+         "name": "Volatilidade",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Volatilidade_relativa",
+         "rawType": "float64",
+         "type": "float"
         }
        ],
-       "ref": "02187040-c4c8-4af9-803e-a0ba0dd31aea",
+       "ref": "bcf53d99-5945-4841-a54c-273ce5f7ba87",
        "rows": [
         [
          "2025-07-28 00:00:00",
@@ -498,7 +508,9 @@
          "-0.02534577508944047",
          "-0.024957383533440125",
          "-0.023075785582255093",
-         "-0.02342958928003902"
+         "-0.02342958928003902",
+         "2352.0",
+         "0.017879133409350056"
         ],
         [
          "2025-07-29 00:00:00",
@@ -517,7 +529,9 @@
          "-0.00491820485522787",
          "-0.020941983550326393",
          "-0.020551837120233785",
-         "-0.018661737523105404"
+         "-0.018661737523105404",
+         "1216.0",
+         "0.009203057594793007"
         ],
         [
          "2025-07-30 00:00:00",
@@ -536,7 +550,9 @@
          "-0.0013192513807419592",
          "0.004558336207284297",
          "-0.011618043005200418",
-         "-0.011224181062791994"
+         "-0.011224181062791994",
+         "2485.0",
+         "0.018842458846098437"
         ],
         [
          "2025-07-31 00:00:00",
@@ -555,7 +571,9 @@
          "-0.007199558327613431",
          "-0.008168923803915984",
          "-0.0023316489481339797",
-         "-0.01839707889204445"
+         "-0.01839707889204445",
+         "1891.0",
+         "0.014315346414728682"
         ],
         [
          "2025-08-01 00:00:00",
@@ -574,11 +592,13 @@
          "-0.02165208912002836",
          "-0.011929630845444517",
          "-0.012894377902166743",
-         "-0.007084914006387666"
+         "-0.007084914006387666",
+         "1097.0",
+         "0.008301801120024217"
         ]
        ],
        "shape": {
-        "columns": 16,
+        "columns": 18,
         "rows": 5
        }
       },
@@ -617,9 +637,13 @@
        "      <th>lag_8</th>\n",
        "      <th>lag_9</th>\n",
        "      <th>lag_10</th>\n",
+       "      <th>Volatilidade</th>\n",
+       "      <th>Volatilidade_relativa</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -657,6 +681,8 @@
        "      <td>-0.024957</td>\n",
        "      <td>-0.023076</td>\n",
        "      <td>-0.023430</td>\n",
+       "      <td>2352.0</td>\n",
+       "      <td>0.017879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-29</th>\n",
@@ -676,6 +702,8 @@
        "      <td>-0.020942</td>\n",
        "      <td>-0.020552</td>\n",
        "      <td>-0.018662</td>\n",
+       "      <td>1216.0</td>\n",
+       "      <td>0.009203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-30</th>\n",
@@ -695,6 +723,8 @@
        "      <td>0.004558</td>\n",
        "      <td>-0.011618</td>\n",
        "      <td>-0.011224</td>\n",
+       "      <td>2485.0</td>\n",
+       "      <td>0.018842</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-07-31</th>\n",
@@ -714,6 +744,8 @@
        "      <td>-0.008169</td>\n",
        "      <td>-0.002332</td>\n",
        "      <td>-0.018397</td>\n",
+       "      <td>1891.0</td>\n",
+       "      <td>0.014315</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-08-01</th>\n",
@@ -733,6 +765,8 @@
        "      <td>-0.011930</td>\n",
        "      <td>-0.012894</td>\n",
        "      <td>-0.007085</td>\n",
+       "      <td>1097.0</td>\n",
+       "      <td>0.008302</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -755,16 +789,16 @@
        "2025-07-31  0.002599  0.007129 -0.003393 -0.005508 -0.016969 -0.007200   \n",
        "2025-08-01 -0.011590 -0.002177  0.002331 -0.008141 -0.010246 -0.021652   \n",
        "\n",
-       "               lag_8     lag_9    lag_10  \n",
-       "Date                                      \n",
-       "2025-07-28 -0.024957 -0.023076 -0.023430  \n",
-       "2025-07-29 -0.020942 -0.020552 -0.018662  \n",
-       "2025-07-30  0.004558 -0.011618 -0.011224  \n",
-       "2025-07-31 -0.008169 -0.002332 -0.018397  \n",
-       "2025-08-01 -0.011930 -0.012894 -0.007085  "
+       "               lag_8     lag_9    lag_10  Volatilidade  Volatilidade_relativa  \n",
+       "Date                                                                           \n",
+       "2025-07-28 -0.024957 -0.023076 -0.023430        2352.0               0.017879  \n",
+       "2025-07-29 -0.020942 -0.020552 -0.018662        1216.0               0.009203  \n",
+       "2025-07-30  0.004558 -0.011618 -0.011224        2485.0               0.018842  \n",
+       "2025-07-31 -0.008169 -0.002332 -0.018397        1891.0               0.014315  \n",
+       "2025-08-01 -0.011930 -0.012894 -0.007085        1097.0               0.008302  "
       ]
      },
-     "execution_count": 279,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 285,
    "id": "80477039",
    "metadata": {},
    "outputs": [],
@@ -800,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 286,
    "id": "ff62c794",
    "metadata": {},
    "outputs": [],
@@ -816,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 287,
    "id": "f3c4b1b1",
    "metadata": {},
    "outputs": [
@@ -902,7 +936,7 @@
          "type": "float"
         }
        ],
-       "ref": "573a0370-3a9d-4b2d-81e6-9ae4e150fdea",
+       "ref": "e8fd7054-0db5-4204-ad90-b218fa9a67c9",
        "rows": [
         [
          "2025-07-28 00:00:00",
@@ -1177,7 +1211,7 @@
          "type": "integer"
         }
        ],
-       "ref": "951e927b-102b-45cf-8f4a-24b969ed7dee",
+       "ref": "b682e7b4-5d2f-4b3f-adab-01727e82115a",
        "rows": [
         [
          "2025-07-28 00:00:00",
@@ -1234,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 288,
    "id": "294aa743",
    "metadata": {},
    "outputs": [],
@@ -1245,18 +1279,16 @@
     "df_treino_80 = dados_yf['Close'].loc['2015-01-01':'2023-06-27']\n",
     "df_teste_80 = dados_yf['Close'].loc['2023-06-28':'2025-08-01']\n",
     "\n",
-    "x = dados_yf.drop('Target', axis=1)\n",
-    "x_treino = dados_yf.drop('Target', axis=1).loc['2015-01-01':'2023-06-27']\n",
-    "x_teste = dados_yf.drop('Target', axis=1).loc['2023-06-28':'2025-08-01']\n",
+    "x_treino = x.loc['2015-01-01':'2023-06-27']\n",
+    "x_teste = x.loc['2023-06-28':'2025-08-01']\n",
     "\n",
-    "y = dados_yf['Target']\n",
-    "y_treino = dados_yf['Target'].copy().loc['2015-01-01':'2023-06-27']\n",
-    "y_teste =dados_yf['Target'].copy().loc['2023-06-28':'2025-08-01']"
+    "y_treino = y.copy().loc['2015-01-01':'2023-06-27']\n",
+    "y_teste = y.copy().loc['2023-06-28':'2025-08-01']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 289,
    "id": "cac176c4",
    "metadata": {},
    "outputs": [],
@@ -3383,7 +3415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 290,
    "id": "71293587",
    "metadata": {},
    "outputs": [],
@@ -3391,260 +3423,6 @@
     "modelo_rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "modelo_rf.fit(x_treino_scaled, y_treino)\n",
     "previsao_rf = modelo_rf.predict(x_teste_scaled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "id": "ce8ce691",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "Date",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "Target",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "0f4aae28-5e49-429d-9b75-5f774c6a6783",
-       "rows": [
-        [
-         "2015-01-02 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-05 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-06 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-07 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-08 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-09 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-12 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-13 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-14 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-15 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-16 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-19 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-20 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-21 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-22 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-23 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-26 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-27 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-28 00:00:00",
-         "1"
-        ],
-        [
-         "2015-01-29 00:00:00",
-         "0"
-        ],
-        [
-         "2015-01-30 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-02 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-03 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-04 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-05 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-06 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-09 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-10 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-11 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-12 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-13 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-18 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-19 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-20 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-23 00:00:00",
-         "1"
-        ],
-        [
-         "2015-02-24 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-25 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-26 00:00:00",
-         "0"
-        ],
-        [
-         "2015-02-27 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-02 00:00:00",
-         "1"
-        ],
-        [
-         "2015-03-03 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-04 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-05 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-06 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-09 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-10 00:00:00",
-         "1"
-        ],
-        [
-         "2015-03-11 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-12 00:00:00",
-         "0"
-        ],
-        [
-         "2015-03-13 00:00:00",
-         "1"
-        ],
-        [
-         "2015-03-16 00:00:00",
-         "1"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 2101
-       }
-      },
-      "text/plain": [
-       "Date\n",
-       "2015-01-02    0\n",
-       "2015-01-05    1\n",
-       "2015-01-06    1\n",
-       "2015-01-07    1\n",
-       "2015-01-08    0\n",
-       "             ..\n",
-       "2023-06-21    0\n",
-       "2023-06-22    1\n",
-       "2023-06-23    0\n",
-       "2023-06-26    0\n",
-       "2023-06-27    0\n",
-       "Name: Target, Length: 2101, dtype: int64"
-      ]
-     },
-     "execution_count": 277,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_treino"
    ]
   },
   {
@@ -3657,7 +3435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 291,
    "id": "43ae1c5b",
    "metadata": {},
    "outputs": [],
@@ -3679,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 292,
    "id": "6cc7f576",
    "metadata": {},
    "outputs": [],
@@ -4008,7 +3786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 293,
    "id": "30e466f7",
    "metadata": {},
    "outputs": [
@@ -4042,35 +3820,35 @@
          "type": "string"
         }
        ],
-       "ref": "2c6cfc27-bc25-4509-a267-29c994dcaf15",
+       "ref": "c023a8ab-a554-4c2a-93bb-5d2d4d4f00e1",
        "rows": [
         [
-         "CatBoost",
-         "54.01 %",
-         "54.27 %",
-         "54.01 %",
-         "53.12 %"
-        ],
-        [
          "Random Forest",
-         "53.05 %",
-         "53.21 %",
-         "53.05 %",
-         "52.27 %"
+         "54.77 %",
+         "55.00 %",
+         "54.77 %",
+         "54.13 %"
         ],
         [
          "XGBoost",
-         "52.29 %",
-         "52.33 %",
-         "52.29 %",
-         "51.90 %"
+         "52.10 %",
+         "52.14 %",
+         "52.10 %",
+         "51.69 %"
         ],
         [
          "LightGBM",
-         "52.29 %",
-         "52.33 %",
-         "52.29 %",
-         "51.90 %"
+         "52.10 %",
+         "52.14 %",
+         "52.10 %",
+         "51.69 %"
+        ],
+        [
+         "CatBoost",
+         "51.53 %",
+         "51.61 %",
+         "51.53 %",
+         "50.46 %"
         ]
        ],
        "shape": {
@@ -4112,32 +3890,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>CatBoost</th>\n",
-       "      <td>54.01 %</td>\n",
-       "      <td>54.27 %</td>\n",
-       "      <td>54.01 %</td>\n",
-       "      <td>53.12 %</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>53.05 %</td>\n",
-       "      <td>53.21 %</td>\n",
-       "      <td>53.05 %</td>\n",
-       "      <td>52.27 %</td>\n",
+       "      <td>54.77 %</td>\n",
+       "      <td>55.00 %</td>\n",
+       "      <td>54.77 %</td>\n",
+       "      <td>54.13 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGBoost</th>\n",
-       "      <td>52.29 %</td>\n",
-       "      <td>52.33 %</td>\n",
-       "      <td>52.29 %</td>\n",
-       "      <td>51.90 %</td>\n",
+       "      <td>52.10 %</td>\n",
+       "      <td>52.14 %</td>\n",
+       "      <td>52.10 %</td>\n",
+       "      <td>51.69 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LightGBM</th>\n",
-       "      <td>52.29 %</td>\n",
-       "      <td>52.33 %</td>\n",
-       "      <td>52.29 %</td>\n",
-       "      <td>51.90 %</td>\n",
+       "      <td>52.10 %</td>\n",
+       "      <td>52.14 %</td>\n",
+       "      <td>52.10 %</td>\n",
+       "      <td>51.69 %</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CatBoost</th>\n",
+       "      <td>51.53 %</td>\n",
+       "      <td>51.61 %</td>\n",
+       "      <td>51.53 %</td>\n",
+       "      <td>50.46 %</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4146,10 +3924,10 @@
       "text/plain": [
        "              Acurácia Precisão   Recall F1-Score\n",
        "Modelo                                           \n",
-       "CatBoost       54.01 %  54.27 %  54.01 %  53.12 %\n",
-       "Random Forest  53.05 %  53.21 %  53.05 %  52.27 %\n",
-       "XGBoost        52.29 %  52.33 %  52.29 %  51.90 %\n",
-       "LightGBM       52.29 %  52.33 %  52.29 %  51.90 %"
+       "Random Forest  54.77 %  55.00 %  54.77 %  54.13 %\n",
+       "XGBoost        52.10 %  52.14 %  52.10 %  51.69 %\n",
+       "LightGBM       52.10 %  52.14 %  52.10 %  51.69 %\n",
+       "CatBoost       51.53 %  51.61 %  51.53 %  50.46 %"
       ]
      },
      "metadata": {},
